# toolkit-data

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  build_packages.py  pyproject.toml  requirements.txt  sync_to_cdn.py  validate_packages.py
.github/: CODEOWNERS
.github/workflows/: build-packages.yml  check-no-artifacts.yml  release.yaml  upload_to_cdn.yaml
data/: valhall_file_metadata.csv  valhall_timeseries_metadata.csv
data/infield_on_cdm_example/: cdf_cdm_CogniteAsset_v1_node-part-0000.Instances.ndjson  cdf_cdm_CogniteAsset_v1_node.Manifest.yaml  cdf_cdm_CogniteFile_v1_node-part-0000.Instances.ndjson  cdf_cdm_CogniteFile_v1_node.Manifest.yaml  cdf_cdm_CogniteTimeSeries_v1_node-part-0000.Instances.ndjson  cdf_cdm_CogniteTimeSeries_v1_node.Manifest.yaml  cdf_idm_CogniteMaintenanceOrder_v1_node-part-0000.Instances.ndjson  cdf_idm_CogniteMaintenanceOrder_v1_node.Manifest.yaml  cdf_idm_CogniteNotification_v1_node-part-0000.Instances.ndjson  cdf_idm_CogniteNotification_v1_node.Manifest.yaml  cdf_idm_CogniteOperation_v1_node-part-0000.Instances.ndjson  cdf_idm_CogniteOperation_v1_node.Manifest.yaml  oslo_refinery_source_instance_space_1.Space.yaml
modules/: packages.toml
modules/bootcamp/: module.toml
modules/cdf_common/: module.toml
modules/cdf_infield_on_cdm_common/: module.toml
modules/cdf_infield_on_cdm_common_extention/: module.toml
modules/cdf_infield_on_cdm_location/: module.toml
scripts/: build_packages.py  cognite-sdk-config-example.yaml  pi_timeseries.ipynb  sync_to_cdn.py  validate_packages.py
(+149 files in other folders)
